WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159450
REGRESSION(
r200769
): animations are no longer overridden
https://bugs.webkit.org/show_bug.cgi?id=159450
Summary
REGRESSION(r200769): animations are no longer overridden
Dean Jackson
Reported
2016-07-05 19:27:04 PDT
https://trac.webkit.org/changeset/200769
has introduced a regression on AMP content. Making a test case now.
Attachments
Demo
(490 bytes, text/html)
2016-07-05 19:33 PDT
,
Ryosuke Niwa
no flags
Details
test
(500 bytes, text/html)
2016-07-05 19:42 PDT
,
Dean Jackson
no flags
Details
Reduction for AMP
(569 bytes, text/html)
2016-07-05 20:05 PDT
,
Ryosuke Niwa
no flags
Details
Patch
(8.09 KB, patch)
2016-07-06 19:41 PDT
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-yosemite
(807.18 KB, application/zip)
2016-07-06 20:28 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews107 for mac-yosemite-wk2
(875.06 KB, application/zip)
2016-07-06 20:32 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews116 for mac-yosemite
(1.44 MB, application/zip)
2016-07-06 20:38 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews124 for ios-simulator-wk2
(658.48 KB, application/zip)
2016-07-06 20:39 PDT
,
Build Bot
no flags
Details
Patch
(9.92 KB, patch)
2016-07-07 17:09 PDT
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-07-05 19:27:20 PDT
<
rdar://problem/27188180
>
Ryosuke Niwa
Comment 2
2016-07-05 19:31:02 PDT
The problem appears to the code change in MutableStyleProperties::setProperty. We’re no longer overriding prefixing variant, and this manifests in 8s animation of the content being visiblity: hidden not be overriden. Effectively, AMP has the following rules: body { -webkit-animation: -amp-start 8s steps(1,end) 0s 1 normal both; animation: -amp-start 8s steps(1,end) 0s 1 normal both; } body { animation: none; } And animation: none is no longer taking effect so we’re delayin the display of contenets for 8s now.
Ryosuke Niwa
Comment 3
2016-07-05 19:31:45 PDT
<
rdar://problem/27120570
>
Ryosuke Niwa
Comment 4
2016-07-05 19:33:06 PDT
Created
attachment 282841
[details]
Demo
Dean Jackson
Comment 5
2016-07-05 19:41:59 PDT
<
rdar://problem/27120570
>
Dean Jackson
Comment 6
2016-07-05 19:42:35 PDT
Created
attachment 282843
[details]
test
Ryosuke Niwa
Comment 7
2016-07-05 19:45:05 PDT
e.g.
http://www.macrumors.com/2016/06/30/apple-tidal-acquisition-talks/amp/
and
https://ampbyexample.com
takes 8s to load :(
Ryosuke Niwa
Comment 8
2016-07-05 20:05:41 PDT
Created
attachment 282845
[details]
Reduction for AMP
Ryosuke Niwa
Comment 9
2016-07-05 20:41:20 PDT
Hm... it looks like we might be confusing the style resolver here. Because "animation: none" doesn't set -webkit-animation-*, the earlier values of -webkit-animation-* are persisting. We might need to teach the style resolver to ignore prefixed properties when unprefixed properties are specified.
Dean Jackson
Comment 10
2016-07-06 19:41:40 PDT
Created
attachment 282982
[details]
Patch
WebKit Commit Bot
Comment 11
2016-07-06 19:43:12 PDT
Attachment 282982
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:9: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 12
2016-07-06 20:28:55 PDT
Comment on
attachment 282982
[details]
Patch
Attachment 282982
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1638872
New failing tests: transitions/transitions-parsing.html animations/animation-shorthand-removed.html fast/css/shorthand-omitted-initial-value-overrides-shorthand.html
Build Bot
Comment 13
2016-07-06 20:28:59 PDT
Created
attachment 282984
[details]
Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 14
2016-07-06 20:32:18 PDT
Comment on
attachment 282982
[details]
Patch
Attachment 282982
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1638876
New failing tests: animations/animation-shorthand-removed.html fast/css/shorthand-omitted-initial-value-overrides-shorthand.html transitions/transitions-parsing.html
Build Bot
Comment 15
2016-07-06 20:32:22 PDT
Created
attachment 282985
[details]
Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 16
2016-07-06 20:38:26 PDT
Comment on
attachment 282982
[details]
Patch
Attachment 282982
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1638878
New failing tests: transitions/transitions-parsing.html animations/animation-shorthand-removed.html fast/css/shorthand-omitted-initial-value-overrides-shorthand.html
Build Bot
Comment 17
2016-07-06 20:38:30 PDT
Created
attachment 282986
[details]
Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 18
2016-07-06 20:39:33 PDT
Comment on
attachment 282982
[details]
Patch
Attachment 282982
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1638884
New failing tests: transitions/transitions-parsing.html animations/animation-shorthand-removed.html fast/css/shorthand-omitted-initial-value-overrides-shorthand.html
Build Bot
Comment 19
2016-07-06 20:39:37 PDT
Created
attachment 282987
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Dean Jackson
Comment 20
2016-07-07 17:09:15 PDT
Created
attachment 283093
[details]
Patch
Dean Jackson
Comment 21
2016-07-07 17:21:49 PDT
Committed
r202950
: <
http://trac.webkit.org/changeset/202950
>
Antti Koivisto
Comment 22
2016-07-07 17:27:50 PDT
Comment on
attachment 283093
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=283093&action=review
> Source/WebCore/css/CSSParser.cpp:3843 > + // We can't use ShorthandScope here as we can already be inside one (e.g we are parsing CSSTransition). > + m_currentShorthand = prefixingVariantForPropertyId(m_currentShorthand); > + addProperty(prefixingVariant, WTFMove(value), important, implicit); > + m_currentShorthand = prefixingVariantForPropertyId(m_currentShorthand);
I don't understand this code. Why are we repeating the same operation before and after addProperty? Also isn't the whole point of FooScopes that they can nest?
mitz
Comment 23
2016-07-16 23:38:33 PDT
(In reply to
comment #21
)
> Committed
r202950
: <
http://trac.webkit.org/changeset/202950
>
This caused
bug 159861
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug